CHANGES from 3.6 towards 3.7

Please see the public wiki for upgrade instructions.

=== release 3.6.2
- E#19 missing File::Remove in bare installation

=== release 3.6.1
Thu Apr 11 09:49:45 CEST 2019

- #279 publication template parameter blocks width and height was
  processed as chars, needs to be pixels.
- #277 message with only attachment gets default plain text.
- #286 postgres cannot start after install, when no netmask on if
- #283 message signed by PGP incorrectly report change

=== release 3.6.0
2019-04-04

Quite a number of bug fixes, nearly no visible changes.