@@ -4,6 +4,7 @@ Please see the public wiki for upgrade instructions.
 
 === release 3.6.2
 - E#19 missing File::Remove in bare installation
+- #302 unable to process database schema
 
 === release 3.6.1
 Thu Apr 11 09:49:45 CEST 2019
